# hydra-viewport-toolbox

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HydraViewportToolboxConfig.cmake.in  README.md  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.cursor/rules/: create-task.mdc  list-rules.mdc  test-aov.mdc  test-list.mdc  test-task.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yaml  (+9 more)
cmake/: CustomTriplet.cmake.in  Helpers.cmake  HvtHelpers.cmake  VcpkgChooseTriplet.cmake  VcpkgSetup.cmake
docs/: framepass.md  lightingmgr.md  renderbuffermgr.md  scene-index-task-manager.md  taskmgr.md  vcpkg.md  wboit.md
overlay-triplets/: default-customized.cmake
source/: CMakeLists.txt  hvt.rc.in  main.cpp  namespace.h.in
source/dataSource/: CMakeLists.txt  dataSource.cpp  dataSourceRegistry.cpp  dataSourceRegistry.h
source/engine/: CMakeLists.txt  copyDepthShader.cpp  copyDepthShader.h  delegateStreamUtils.h  engine.cpp  framePass.cpp  framePassCamera.cpp  framePassCamera.h  framePassUtils.cpp  hgiInstance.cpp  lightingManager.cpp  lightingManager.h  lightingManagerImpl.h  lightingManagerSDImpl.cpp  lightingManagerSDImpl.h  lightingManagerSIImpl.cpp  lightingManagerSIImpl.h  renderBufferManager.cpp  renderBufferManager.h  renderBufferManagerImpl.h  renderBufferManagerSDImpl.cpp  renderBufferManagerSDImpl.h  renderBufferManagerSIImpl.cpp  renderBufferManagerSIImpl.h  renderIndexProxy.cpp  sceneIndexMode.cpp  selectionHelper.cpp  selectionHelper.h  syncDelegate.cpp  taskContainerSDImpl.cpp  taskContainerSDImpl.h  taskContainerSIImpl.cpp  taskContainerSIImpl.h  taskCreationHelpers.cpp  taskDataContainer.cpp  taskDataContainer.h  taskManager.cpp  taskUtils.cpp  usdStageUtils.cpp  viewport.cpp  (+1 more)
source/engine/shaders/: solidSurface.h
source/event/: CMakeLists.txt
source/geometry/: CMakeLists.txt  geometry.cpp
source/material/: CMakeLists.txt  material.cpp
source/pageableBuffer/: CMakeLists.txt  README.md  pageFileManager.cpp  pageableBuffer.cpp  pageableBufferManager.cpp  pageableDataSource.cpp  pageableMemoryMonitor.cpp  pageableRetainedDataSource.cpp  pageableStrategies.cpp
source/sceneIndex/: CMakeLists.txt  boundingBoxSceneIndex.cpp  displayStyleOverrideSceneIndex.cpp  wireFrameSceneIndex.cpp
source/shadow/: CMakeLists.txt  shadowMatrixComputation.cpp  shadowMatrixComputation.h
source/tasks/: CMakeLists.txt  VisualizeAOVComputeShader.md  aovInputTask.cpp  blurTask.cpp  clearBufferTask.cpp  composeTask.cpp  copyDepthToDepthMsaaTask.cpp  copyTask.cpp  depthBiasTask.cpp  flashPickTask.cpp  fxaaTask.cpp  resources.cpp  ssaoTask.cpp  visualizeAOVCompute.cpp  visualizeAOVCompute.h  visualizeAOVCompute.md  visualizeAOVComputeShader.cpp  visualizeAOVComputeShader.h  visualizeAovCompute.cpp  visualizeAovCompute.h  visualizeAovCompute.md  visualizeAovTask.cpp  wboitRenderTask.cpp  wboitResolveTask.cpp  wboitTokens.h
source/tasks/outline/: outline.cpp  outlineManager.cpp  outlineMaskTask.cpp  outlineOverlayTask.cpp  outlinePrimIdsTask.cpp
source/utils/: CMakeLists.txt  pathUtils.cpp  pathUtils.h
test/: CMakeLists.txt  README.md  main.cpp  test1.cpp  test2.cpp  test3.cpp
test/Data/usd/: test_fixed.usda
test/HowTos/: HowTo01_CreateHgiImplementation.cpp  HowTo02_CreateOneFramePass.cpp  HowTo03_CreateTwoFramePasses.cpp  HowTo04_CreateACustomRenderTask.cpp
test/RenderingFramework/: AndroidTestContext.cpp  AndroidTestContext.h  CMakeLists.txt  CollectTraces.h  GpuImageCapture.cpp  GpuImageCapture.h  HowToCollectTraces.md  ImageUtils.cpp  MetalTestContext.h  MetalTestContext.mm  OpenGLTestContext.cpp  OpenGLTestContext.h  TestContextCreator.h  TestFlags.h  TestHelpers.cpp  TestHelpers.h  UsdHelpers.h  VulkanTestContext.cpp  VulkanTestContext.h  iOSTestHelpers.h  iOSTestHelpers.mm  testContextCreator.cpp  testFramework.cpp  testGlobalFlags.cpp  testHelpers.cpp
test/RenderingFramework/stb/: stb_image_impl.cpp  stb_image_write.h
test/RenderingUtils/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  README.md
test/RenderingUtils/stb/: stb_image_impl.cpp
test/benchmarks/: benchmarkPageableBuffer.cpp
test/data/assets/usd/: cube2.usda  cube_msaa_transformed.usda  default_scene.usdz  depth_test_rectangles.usda  fully_opaque_cube.usda  near_zero_opacity_cube.usda  test_zdepth_fight_blue_only.usd  test_zdepth_fight_red_only.usd  test_zdepth_fight_red_only_osx.usd  translucent_cube.usda  translucent_primitives.usda  volume_with_geometry.usda  wboit_perf_scene.usda
test/data/usd/: cube.usda  default_scene.usdz
test/howTos/: howTo01_CreateHgiImplementation.cpp  howTo02_CreateOneFramePass.cpp  howTo03_CreateTwoFramePasses.cpp  howTo04_CreateACustomRenderTask.cpp  howTo05_UseSSAORenderTask.cpp  howTo06_UseFXAARenderTask.cpp  howTo07_UseIncludeExclude.cpp  howTo08_UseBoundingBoxSceneIndex.cpp  howTo09_UseWireFrameSceneIndex.cpp  howTo10_CustomListOfTasks.cpp  howTo11_UseSkyDomeTask.cpp  howTo19_UseWBOITRenderTask.cpp  howTo20_UseOutlineTasks.cpp  howTo21_UseOutline.cpp  howTo21_UseOutlineManager.cpp
test/tests/: composeTaskHelpers.cpp  composeTaskHelpers.h  testComposeTask.cpp  testDataSource.cpp  testEngineHelpers.cpp  testFramePass.cpp  testFramePasses.cpp  testGeometryHelpers.cpp  testMaterial.cpp  testMultiSampling.cpp  testOutline.cpp  testOutlineFacade.cpp  testOutlineManager.cpp  testOutlineTasks.cpp  testPageableBuffer.cpp  testPartialDisplay.cpp  testPartialModel.cpp  testPathUtils.cpp  testSSAOTask.cpp  testSearches.cpp  testShadowMatrix.cpp  testTaskHelpers.cpp  testTaskManager.cpp  testThreeFramePasses.cpp  testViewportRect.cpp  testVisualizeAOV.cpp  testWboitTask.cpp  testZDepthFighting.cpp  zDepthFighting.cpp
testFramework/: CMakeLists.txt  hvtTestFramework.rc.in  hvtTestFrameworkConfig.cmake.in  main.cpp
testFramework/framework/: AndroidTestContext.cpp  AndroidTestContext.h  CMakeLists.txt  MetalTestContext.mm  OpenGLTestContext.cpp  VulkanTestContext.cpp  iOSTestHelpers.h  iOSTestHelpers.mm  pxrusd.h  testContextCreator.cpp  testFramework.cpp  testGlobalFlags.cpp
(+102 files in other folders)
